# bootstrap_template_repository

./: .gitignore  README.MD  README_OPTIONAL.md  Readme.MD  mkdocs.yml  pyproject.toml
project_name/: test_file.py
test_project/: README.md  pyproject.toml  test_file.py
