[tool.poetry]
name = "temp-project"
version = "0.1.0"
description = ""
authors = ["Banjio <beiermaximilian13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
ruff = "^0.4.3"
ipython = "^8.24.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=120
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # Ignore all because of conflicts with ruff formatter 
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "ISC001",
    "ISC002"
]
